Some tweaks and expansions to the Sphinx documentation.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -72,17 +72,17 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/Scanner.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/strscan.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/Scanner.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/strscan.qhc"
 
 devhelp:
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/Scanner"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/Scanner"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/strscan"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/strscan"
 	@echo "# devhelp"
 
 epub:
